Advanced modifications added